--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="profile-card"><h1 class="profile-card">Profile Card</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Faker_2020_interview.jpg/330px-Faker_2020_interview.jpg"
-        alt="Profile Picture" class="profile-img"></div>
-    
+        alt="Profile Picture" class="profile-img">
+    <h2 class="name">Faker</h2>
+<p clas="age">Age:27</p></div>
+
 </body>
 </html>
