--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Faker_2020_interview.jpg/330px-Faker_2020_interview.jpg"
         alt="Profile Picture" class="profile-img">
     <h2 class="name">Faker</h2>
-<p clas="age">Age:27</p></div>
+<p clas="age">Age:27</p>
+<p class="city">City: Seoul</p>
+<p class="city">Nationality: South Korea</p>
+<p class="phone_number:">Phone Nmber: 0001111111</p></div>
 
 </body>
 </html>
