profession,hobbies and summary

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <p clas="age">Age:27</p>
 <p class="city">City: Seoul</p>
 <p class="city">Nationality: South Korea</p>
-<p class="phone_number:">Phone Nmber: 0001111111</p></div>
+<p class="phone_number:">Phone Nmber: 0001111111</p>
+<p class="profession">Profession: Pro Esport Athlete</p>
+        <p class="hobbies">Hobbies: Reading, Gaming</p>
+        <p class="summary">Summary: All Roads Leads To Me</p>
+    </div>
 
 </body>
 </html>
