added style for the body

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,
      initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <div class="profile-card"><h1 class="profile-card">Profile Card</h1>
@@ -18,7 +20,11 @@
 <p class="profession">Profession: Pro Esport Athlete</p>
         <p class="hobbies">Hobbies: Reading, Gaming</p>
         <p class="summary">Summary: All Roads Leads To Me</p>
-    </div>
+        <div class="buttons">
+            <button class="btn" >Contact</button>
+            <button class="btn">Follow</button>
+        </div>
+</div>
 
 </body>
 </html>
